manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82022132-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "app-82022132.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82022132
            port:
              number: 8080
        pathType: Prefix
